--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,18 @@ h1, h2{
     text-align: center;
     font-weight: 400;
 }
+
+p{
+    margin-left: 10px;
+}
+
+button{
+    border: solid black 2px;
+    background-color: white;
+    border-radius: 10%;
+    padding: 10px;
+
+
+
+
+}
